:sparkles: feat: implement CreateAccount
